--- a/package.json
+++ b/package.json
@@ -3,42 +3,52 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-  "tsc": "tsc --noEmit",
-  "lint": "next lint",
-  "fmt": "prettier --write src/",
-  "fmt-check": "prettier --check src/",
-  "dev": "next dev",
-  "build": "next build",
-  "start": "next start",
-  "deploy-staging": "vercel",
-  "deploy-production": "vercel --prod"
+    "tsc": "tsc --noEmit",
+    "lint": "next lint",
+    "fmt": "prettier --write src/",
+    "fmt-check": "prettier --check src/",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "deploy-staging": "vercel",
+    "deploy-production": "vercel --prod"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-tooltip": "^1.1.2",
+    "@tanstack/react-query": "^5.51.18",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.441.0",
+    "cmdk": "1.0.0",
+    "lucide-react": "^0.419.0",
     "next": "14.2.11",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "@tanstack/react-query": "^5.51.18",
-    "framer-motion": "^11.3.21",
-    "lucide-react": "^0.419.0",
-    "nuqs": "^1.17.6",
-    "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
     "@tailwindcss/typography": "^0.5.14",
-    "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
@@ -47,9 +57,9 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-unused-imports": "^3.2.0",
+    "postcss": "^8",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
